# dockers

Cloudcompare/: Dockerfile  build.sh  run.sh
Cloudcompare/Share/myKPConv/: settings.json
Cloudcompare/Share/myKPConv/catboost_info/: learn_error.tsv  test_error.tsv
Cloudcompare/Share/myKPConv/catboost_info/test/: events.out.tfevents
Cloudcompare/Share/myKPConv/data/: create_data_file.py  pcd_to_xyz_label.py
Cloudcompare/Share/myKPConv/data/cloud/: cloud.pcd
Cloudcompare/Share/myKPConv/tools/: trainer.py
Cloudcompare/myKPConv/: model.py
Cloudcompare/myKPConv/catboost_info/: catboost_training.json  partial_stats.tsv  time_left.tsv
Cloudcompare/myKPConv/catboost_info/eval_dataset/: events.out.tfevents
Cloudcompare/myKPConv/catboost_info/learn/: events.out.tfevents
Cloudcompare/myKPConv/data/testing/: cloud.xyz_label_conf
Cloudcompare/myKPConv/tools/: data_load.py  data_load_scale.py  visualize_point.py
Cloudcompare/qCirno/: CMakeLists.txt  info.json  qCirno.qrc
Cloudcompare/qCirno/include/: CMakeLists.txt  qCirno.h
Cloudcompare/qCirno/src/: CMakeLists.txt  qCirno.cpp
MyDocker/: Dockerfile  build.sh  run.sh
QGIS/: Dockerfile  build.sh  run.sh
